fixed text wrapping in radio buttons in form

--- a/assets/css/Main.css
+++ b/assets/css/Main.css
@@ -48,6 +48,6 @@ body {
 	}
 }
 
-.btn-group, .btn-group-vertical {
-    display: inline-block;
+.btn {
+	white-space: normal;
 }
